# anverali-test

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
anverali_test/: bitrix.py  enums.py  main.py
anverali_test/database/: __init__.py  database.py  models.py
